# RadeonProRender-Baikal

./: CMakeLists.txt  premake5.lua
Baikal/: Baikal.lua
Baikal/Controllers/: clw_scene_controller.h  vk_scene_controller.cpp  vk_scene_controller.h
Baikal/ImGUI/: imgui_impl_glfw_vulkan.cpp
Baikal/Output/: vkoutput.cpp  vkoutput.h
Baikal/PostEffects/: bilateral_denoiser.h  post_effect.h  wavelet_denoiser.h
Baikal/RenderFactory/: clw_render_factory.cpp  clw_render_factory.h  render_factory.h  vk_render_factory.cpp  vk_render_factory.h
Baikal/Renderers/: monte_carlo_renderer.cpp  monte_carlo_renderer.h  renderer.h  vk_renderer.cpp  vk_renderer.h
Baikal/SceneGraph/: texture.h  vkscene.h
Baikal/Vulkan/: VulkanAndroid.h  VulkanBuffer.hpp  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanTextOverlay.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  ambient_occlusion.h  camera.hpp  direct_illumination.h  effect.h  (+9 more)
BaikalStandalone/: BaikalStandalone.lua  README.md  create_dataset.bat
BaikalTest/: aov.h  basic.h
Rpr/: CMakeLists.txt  RadeonProRender.cpp  RadeonProRender.def  RadeonProRender.h  Rpr.lua  Wrap.cpp
RprDemo/: CMakeLists.txt  RprDemo.lua  load_obj_test.h  main.cpp
RprLoadStore/: RprLoadStore.lua
RprSupport/: CMakeLists.txt  RprSupport.cpp  RprSupport.lua
RprTest/: RprTest.lua  RprTools.cpp  load_obj_test.h  main.cpp  uberv2.h
vkw/: main.cpp  vk_memory_allocator.h  vk_memory_manager.cpp  vk_pipeline_manager.cpp  vk_pipeline_manager.h  vk_shader_manager.cpp  vkw.lua
vkwtest/: main.cpp  vkwtest.lua
(+179 files in other folders)
